# digiham

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
assets/: digiham.icns  generate-icons.sh
examples/plugins/: README.md  dx_alert.py  qso_csv.py  solar_theme.py
packaging/: build-hamlib.sh  digiham.spec  entry.py
packaging/linux/: build-appimage.sh  digiham.desktop
packaging/macos/: build-dmg.sh
packaging/windows/: digiham.iss
src/digiham/: adif.py  audio.py  bands.py  config.py  decoder.py  devs.py  dxcc.py  engine.py  geo.py  main.py  plugins.py  pskreporter.py  rig.py  rigctl.py  sequencer.py  serialports.py  spotlog.py  wsjtx.py
src/digiham/gui/: __init__.py  decode_table.py  log_window.py  mainwindow.py  plugins_dialog.py  settings_dialog.py  theme.py  waterfall.py
src/digiham/resources/: __init__.py
tests/: rig_debug.py  test_adif.py  test_devs.py  test_dxcc.py  test_engine_tx.py  test_fieldday.py  test_plugins.py  test_rigctl.py  test_sequencer.py  test_serialports.py  test_spotlog.py
