[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "digiham"
version = "1.0.1"
description = "Tools for amateur radio digital modes"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Ellie", email = "ellie@ellierf.com" },
]
dependencies = [
    "ft8lib>=1.3.2",
    "numpy",
    "scipy",
    "PySide6>=6.6",
    "sounddevice",
    "pyserial",
]

[project.optional-dependencies]
packaging = [
    "pyinstaller>=6.11",
]

[project.scripts]
digiham = "digiham.main:main"
digiham-gui = "digiham.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/digiham"]
